- null token instead of 401 response

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,12 @@
         {
             "name": "Dev Lexik",
             "email": "dev@lexik.fr"
+        },
+        {
+            "name": "Arnaud De Backer"
+        },
+        {
+            "name": "Axel Bodart"
         }
     ],
     "require": {
